@startuml

title __FOODLIVERYAPP's Class Diagram__\n

  namespace com.example.foodliveryapp {
    class com.example.foodliveryapp.DailyStatsFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - mParam1 : String
        - mParam2 : String
        + DailyStatsFragment()
        {static} + newInstance()
        + onCreate()
        + onCreateView()
    }
  }
  

  namespace com.example.foodliveryapp {
    class com.example.foodliveryapp.MonthlyStatsFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - mParam1 : String
        - mParam2 : String
        + MonthlyStatsFragment()
        {static} + newInstance()
        + onCreate()
        + onCreateView()
    }
  }
  

  com.example.foodliveryapp.DailyStatsFragment -up-|> androidx.fragment.app.Fragment
  com.example.foodliveryapp.MonthlyStatsFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
